<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">拯救生命媒体布道</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="guide_button">直接进入</string>
    <string name="btn_home">首页</string>
    <string name="btn_explore">发现</string>
    <string name="btn_community">书籍</string>
    <string name="btn_myself">我的</string>
    <string name="title_activity_home">最新推荐</string>
    <string name="title_activity_explore">发 现</string>
    <string name="title_activity_community">社 区</string>
    <string name="title_activity_myself">我 的</string>
    <string name="btn_zb">礼拜直播</string>
    <string name="btn_cb">礼拜重播</string>
    <string name="btn_xl">系列讲座</string>
    <string name="title_zxtj">最新推荐</string>
    <string name="video_home_title">礼拜视频</string>

    <string name="blank">\u3000\u3000</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="teamName">微光工作室</string>
    <string name="videoHome">礼拜视频</string>
    <string name="whiteBook">预言之灵</string>
    <string name="feedBack">意见反馈</string>
    <string name="lifeBook">现代真理丛书</string>
    <string name="aboutUs">关于我们</string>

    <string name="comment_count">%d 条评论</string>
    <string name="all_people">所有内置用户</string>
    <string name="recent_news">最近一周文章</string>
    <string name="days_ago">%d 天前</string>
    <string name="like_count">%d 人阿门</string>
    <string name="post_count" translatable="false">%d 人收藏</string>

    <string name="submit">提交</string>
    <string name="commentStr">评论</string>
    <string name="writeCommentStr">点评</string>
    <string name="shareStr">分享</string>
    <string name="collectStr">收藏</string>
    <string name="dianzan">阿门</string>
    <string name="introFlagTitle">简介</string>
    <string name="recommendFlagTitle">相关推荐</string>
    <string name="commentFlagTitle">用户评论</string>
    <string name="desc_shrinkup">收起</string>
    <string name="desc_spread">更多...</string>
    <string name="feedBackDesc">写下问题和建议，我们将为您不断改进</string>
    <string name="reminder">请先登录</string>
    <string name="beginRead">开始阅读</string>
    <string name="shoucBook">收藏</string>
    <string name="title_activity_content">ContentActivity</string>
    <string name="loadMore">加载更多...</string>

    <string name="cache">缓存</string>

    <string name="idtxthint">用户名/邮箱</string>
    <string name="pwdtxthint">密码</string>
    <string name="loginbtntext">登录</string>
    <string name="forgot_pwd">忘记密码？</string>
    <string name="btn_share_weixinmoments_str">朋友圈</string>
    <string name="btn_share_weixinhy_str">微信好友</string>
    <string name="btn_share_qqhy_str">QQ好友</string>
    <string name="btn_share_qqzone_str">QQ空间</string>
    <string name="btn_share_sina_str">新浪微博</string>

    <string name="title_user_activity">我的</string>
    <string name="lxfs">联系方式</string>

    <string name="desc_1">我们是通过书籍、音频、视频、网络来传播福音的媒体;</string>
    <string name="desc_2">旨在传播真理，力图帮助所有基督徒和非基督徒走向生命的救赎之路;</string>
    <string name="desc_3">帮助你们将生活的根基建立在圣经的话语之上，创建幸福的家庭，得享健康的生活。</string>
    <string name="desc_4">联系电话： 13804244366</string>
    <string name="desc_5">联系电话： 15140501466</string>
    <string name="desc_6">邮箱： sostvbjb@163.com</string>
    <string name="desc_7">官方微博： weibo.com/sostvcn</string>
    <string name="desc_8">微信公众号： palm77777</string>
    <string name="desc_9">电脑网站： www.sostvcn.com</string>
    <string name="desc_10">手机网站： m.sostvcn.com</string>

    <string name="cb_content_t0">礼拜证道</string>
    <string name="cb_content_0">
        七日的周期是从上帝起初创造地球的时候起始的，并且借着《圣经》的历史保留至今。上帝应许在这个神圣之日赐下丰富的恩典，而这恩典便是伴随上帝的话语而来的。这些宝贵的话语要成为我们路上的光，并使我们从中得到力量的生命之粮。《每周证道》汇集了多位牧师、长老及传道人从不同角度讲解《圣经》的讲道，能够帮助屏幕前的各位从上帝的话语中得到恩典和力量。每周证道，每周为您预备！
    </string>

    <string name="cb_content_t1">圣经预言</string>
    <string name="cb_content_1">
        上帝已经将人类必须明白的真理记录在《圣经》之中，然而真正渴望并能正确理解的人却寥寥无几。在这个黑暗而混乱的末时代，《圣经》的预言就是我们信仰道路的指南针。本栏目将通过历史事实向您陈明圣经预言在各个历史时期的应验，并通过预言看明现今世界的位置及走向；《圣经预言》将向您呈现历代跟随现代真理之上帝的真百姓所遇到的考验及其得胜的场面，这一切将是耶稣基督再来之前末时事件的象征和缩影。透过《圣经预言》，你可以看明过去和未来，成为上帝麦田的守望者。
    </string>

    <string name="cb_content_t2">启示录之旅</string>
    <string name="cb_content_2">
        时光机将在您点击的那一刻开启，您将穿越到两千年前的一座孤岛，从那里开始，您就进入到了奇妙的启示录之旅中。您将随着耶稣行走于七个金灯台之间；您将看到羔羊揭开七印的场面；又将震惊那从海中上来的十角七头的兽和从地中上来两角如同羊羔的兽；您将看到耶稣架云降临的荣耀情景；最终您将被新天新地的荣美所震撼。这些预言中所叙述的事件一部分已成过去，一部分正在成就；一部分使人看到黑暗权势与天上君王之间的大争斗，一部分则显示赎民在新天新地所有的胜利与喜乐。您想回顾历史，见证初代使徒教会，并中世纪瓦典西人为真理献身的场面吗？您想预备好得以经历《圣经》最后即将应验的预言吗？现在就邀请您与我们一起踏上这从古至今，并从今至永恒的启示录之旅吧！
    </string>

    <string name="cb_content_t3">青年信仰畅谈</string>
    <string name="cb_content_3">
        青年在上帝眼中极为宝贵，因为上帝为他们设立了崇高的标准，并在他们身上有着美好的旨意。所罗门对青年人有这样的劝勉：“你趁着年幼，当记念造你的主。”《青年信仰畅谈》是几位青年人从他们的角度探讨信仰和生活中所遇到的种种问题，比如基督徒合理的社交，正当康乐活动，读书与音乐等等。他们以上帝的话语为指南，结合自身经验讲述上帝的引导，以及在生活中的得胜，以启发更多青年人明白所肩负的责任与使命，并全心为上帝献上自己。
    </string>

    <string name="cb_content_t4">回归圣经指引</string>
    <string name="cb_content_4">
        《回归圣经指引》是一个围绕《圣经》重要主题展开的谈话节目，通过研究与探讨广为大众关注的《圣经》主题，针对普遍存在的有关《圣经》一系列基本信仰的问题，尤其是基督教界常被误解以及长久以来被人的传统所掩盖的《圣经》真理，以问答与讲解的方式，让久被埋藏的真理重新恢复其原本的光泽，让一切以《圣经》为信仰准则的基督徒回到上帝真实的话语当中，并坚定地走在正确的信仰道路上。本节目旨在帮助基督徒建立正确的信仰基础，并拥有真实的属灵经验。
    </string>
    <string name="cb_content_t5">圣经与时事</string>
    <string name="cb_content_5">
        当今世界，风云变幻，现今乃是对于一切存活之人，都具有极其重大关系的时期。有识之士都在留心注意那在我们周围所发生的大事。近年中东北非相继爆发革命，继利比亚卡扎菲又一个中东强人政权被颠覆之后，叙利亚再次陷入危机；罗马教皇本笃十六世宣布辞职，成为近600年来首位在有生之年主动退位的教皇，震惊世界；欧债危机空前爆发，波涛汹涌，工业企业利润下滑，失业率大幅攀升；索马里粮食危机，难民景象，触目惊心；社会治安混乱，人们道德滑坡，抢劫凶杀等恶性案件屡屡发生……这一切事件的出现，意味着什么呢？难道只是偶然或者巧合吗？下面我们将以《圣经》的角度探究其根源，看明其真相。
    </string>

    <string name="cb_content_t6">音乐，心之声</string>
    <string name="cb_content_6">
        颂赞是我们对上帝所献上最美妙的言语，是人类与上天接触的最直接的通道。音乐能将属灵的真理铭刻在我们心中，也能让我们体会天国的敬拜。每一首颂赞诗歌都是受灵感而写成，当人以真诚之心赞美上帝时，必被同一位圣灵感动。当我们在感人的诗歌背景中体会上帝的恩典与引导时，圣歌的字句，该是怎样不住地在心灵上开启悔改及信、望、爱与快乐的泉源！《音乐心之声》是我们向上帝所发出的感恩之声，赞美之声，崇敬之声，爱之声。请听，音乐心之声！
    </string>
    <string name="cb_content_t8">走近创造</string>
    <string name="cb_content_8">
        走进科学，走近创造。这是SOSTV媒体布道最新推出的一档节目。相信这套节目会给大家带来全新的视野，您将从中以新的角度领略上帝之爱的伟大。《走近创造》将带您步入浩瀚的旅程——观察广阔的宇宙、神奇的地球生态以及丰富的生物界中不计其数的奇妙现象，这一切都在向人心述说上帝的惊人的创造与无穷的荣耀，从而认识到上帝的伟大与无穷，以及人类的渺小与狭隘。你想知道我们所生活的地球在宇宙中的位置吗？你想知道人的眼睛蕴藏着什么样的奥秘吗？你想知道我们出生在这个地球上有上帝什么样的旨意吗？答案就在《走近创造》。
    </string>
    <string name="cb_content_t9">主题研究</string>
    <string name="cb_content_9">
        《圣经》是上帝所默示的，其教训对于我们生活及品行的方方面面都有着非常全备的启示与重大意义。《主题分享》是由多位主讲人针对圣经真理在生活实践中所遇到的不同问题而进行的系列讲座，其中既包括了教育方面的问题，也有帮助您系统了解《圣经》真理的查经课，还有关于如何学习《圣经》的灵修类主题……《主题分享》就如同一个万花筒，无论您从哪个角度都能从中看到《圣经》最优美的一面；它也像一个真理的宝库，您可以从中一眼便发现最想了解的内容。
    </string>

    <string name="cb_content_t10">灵修</string>
    <string name="cb_content_10">领略上帝圣言的丰盛与优美，寻求今生来生的光明与智慧；
        从圣经中聆听上帝的声音，在祈祷中获得恩典与能力；
        仰望耶稣基督品德的荣美，体验福音的大能；
        追随使徒的脚迹，感受圣灵的引导；
        记念中世纪的改革家，为迫近的斗争做好准备。
    </string>

    <string name="cb_content_t11">见证分享</string>
    <string name="cb_content_11">
        每一个生命都是一个贵重的恩赐，每一个人生都是一段生命的历程，每一位基督徒的悔改都是一首恩典的赞歌。通过不同的人讲述他们的信仰经历，因着他们的改变见证了上帝福音的大能，他们的悔改证实了《圣经》话语的能力。曾经花天酒地的富豪，变为了传扬天国福音的使者；强悍的家庭主妇，变为了温柔贤惠的妻子；蛮横无理的青年，变为了在上帝脚前温和恭敬的谦卑学者。上帝在人心中动工，虽然人眼无法看到从天上射下的光芒，但人因信投靠上帝时，就会按上帝的形像造出一个新人。你想改变吗？您想开始新的生活吗？透过《信仰见证》中每一位的真实告白，向您传讲福音的能力，敬请关注！
    </string>

    <string name="cb_content_t12">信仰人生</string>
    <string name="cb_content_12">
        每一个生命都是一个贵重的恩赐，每一个人生都是一段生命的历程，每一位基督徒的悔改都是一首恩典的赞歌。通过不同的人讲述他们的信仰经历，因着他们的改变见证了上帝福音的大能，他们的悔改证实了《圣经》话语的能力。曾经花天酒地的富豪，变为了传扬天国福音的使者；强悍的家庭主妇，变为了温柔贤惠的妻子；蛮横无理的青年，变为了在上帝脚前温和恭敬的谦卑学者。上帝在人心中动工，虽然人眼无法看到从天上射下的光芒，但人因信投靠上帝时，就会按上帝的形像造出一个新人。你想改变吗？您想开始新的生活吗？透过《信仰见证》中每一位的真实告白，向您传讲福音的能力，敬请关注！
    </string>

    <string name="cb_content_t13">健康之道</string>
    <string name="cb_content_13">
        每一个生命都是一个贵重的恩赐，每一个人生都是一段生命的历程，每一位基督徒的悔改都是一首恩典的赞歌。通过不同的人讲述他们的信仰经历，因着他们的改变见证了上帝福音的大能，他们的悔改证实了《圣经》话语的能力。曾经花天酒地的富豪，变为了传扬天国福音的使者；强悍的家庭主妇，变为了温柔贤惠的妻子；蛮横无理的青年，变为了在上帝脚前温和恭敬的谦卑学者。上帝在人心中动工，虽然人眼无法看到从天上射下的光芒，但人因信投靠上帝时，就会按上帝的形像造出一个新人。你想改变吗？您想开始新的生活吗？透过《信仰见证》中每一位的真实告白，向您传讲福音的能力，敬请关注！
    </string>

    <string name="cb_content_t14">真理课堂</string>
    <string name="cb_content_14">
        孩童的得救赖乎其孩童时期的教育。孩童时期是心思最易受感应的时期。他们好动的精神在天性上有趋于顽皮之倾向，活泼的心思若不忙于更佳的事物，就必听从撒但的建议。所以孩童须被教诲，被引导行于安全之道上，被保守远离罪恶。如何教育他们呢？太初所定的教育制度是我们的模范。伊甸园是校舍，大自然是课本，创造主是导师。因此我们也当教导儿童以自然为课本，从中认识上帝的品格与旨意，使一切能见事物对他们都成为未见之事的解答。真理课堂将通过讲解百科知识让孩子明白属灵的教训。
    </string>

</resources>